sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardRenkeiMapping__c/fields/SmartViscaf__IsActive__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>