sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardRenkeiMapping__c/fields/SmartViscaf__NameCardLabel__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__NameCardLabel__c</fullName>
    <description>未使用</description>
    <label>名刺の項目(ラベル)★未使用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>