sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardRenkeiMapping__c/fields/SmartViscaf__NameCardName__c.field-meta.xml
<CustomField>
    <fullName>SmartViscaf__NameCardName__c</fullName>
    <label>名刺の項目(API名称)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>