sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardRenkeiMapping__c/recordTypes/SmartViscaf__Account.recordType-meta.xml
<RecordType>
    <fullName>SmartViscaf__Account</fullName>
    <active>true</active>
    <label>Account</label>
</RecordType>