sfdx-source/SVunpackaged/main/default/objects/SmartViscaf__NameCardRenkeiMapping__c/listViews/SmartViscaf__AllMappings.listView-meta.xml
<ListView>
    <fullName>SmartViscaf__AllMappings</fullName>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
    <language>ja</language>
</ListView>